# mac-setup-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: chrome.rs  docker.rs  git.rs  homebrew.rs  nvm.rs  raycast.rs  slack.rs  vscode.rs
